--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
+    "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.8.2",
     "styled-components": "^5.3.8",
     "sweetalert": "^2.1.2"
